Extract footer to own component
The footer will probably get more complex as we move forward, so it is a
good idea to encapsulate that in a separate component. It also lets us
shield the author query away from components that don't use that data.

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "components/navbar.css";
+@import "components/footer.css";
 @import "templates/blog-post.css";
 /* purgecss end ignore */
 @import "tailwindcss/utilities";
