Lint and format files

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -16,4 +16,11 @@
       @apply mr-4;
     }
   }
+  &__link {
+    @apply opacity-75;
+
+    &--is-active {
+      @apply opacity-100;
+    }
+  }
 }
