--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 /* purgecss start ignore */
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
+@import 'components/Banner/banner.css';
 @import 'components/Footer/footer.css';
 @import 'components/Navbar/navbar.css';
 @import 'components/PostCard/post-card.css';
