--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 @import 'components/Footer/footer.css';
 @import 'components/Navbar/navbar.css';
 @import 'components/PostCard/post-card.css';
+@import 'components/ProjectCard/project-card.css';
 @import 'templates/blog-post/blog-post.css';
 /* purgecss end ignore */
 @import 'tailwindcss/utilities';
@@ -32,7 +33,7 @@
   --color-heading: #1a202c;
   --color-heading-black: black;
   --color-black: #141213;
-  --color-accent: #d1dce5;
+  --color-accent: #fbdc18;
 }
 
 html {
@@ -73,8 +74,8 @@ h3,
 h4,
 h5,
 h6 {
-  @apply font-bold;
-  color: var(--color-heading);
+  /* @apply font-bold; */
+  color: var(--color-primary);
 }
 
 /* h1 {
@@ -116,12 +117,64 @@ blockquote {
   min-width: 50px;
 }
 
-.partition {
-  background: var(--color-accent);
+.partition-bottom {
+  border-bottom: 1px solid #d1dce5;
+}
+
+.partitionJ {
+  /* @apply px-8;
+  max-width: 48rem; */
+  background: #d1dce5;
   height: 1px;
   border: 0;
 }
 
 .container {
-  @apply max-w-3xl mx-auto px-8 my-16;
+  @apply max-w-3xl mx-auto px-8 py-16;
+}
+
+.btn {
+  @apply px-4 py-2 text-center border-solid border-2;
+  min-width: 7rem;
+  border-color: var(--color-accent);
+  color: var(--color-accent);
+
+  transition: background-color 200ms ease-in-out, color 200ms ease-in-out,
+    border-color 200ms ease-in-out;
+
+  &:hover {
+    background-color: var(--color-accent);
+    border: 1px solid var(--color-accent);
+    color: white;
+  }
+
+  &:not(:last-child) {
+    @apply mr-4;
+  }
+
+  &--primary {
+    border-color: var(--color-primary);
+    color: var(--color-primary);
+
+    &:hover {
+      background-color: var(--color-primary);
+      border: 1px solid var(--color-primary);
+      color: white;
+    }
+  }
+
+  &--accent {
+    border-color: var(--color-accent);
+    color: var(--color-accent);
+
+    &:hover {
+      background-color: var(--color-accent);
+      border: 1px solid var(--color-accent);
+      color: white;
+    }
+  }
+}
+
+.color-accent {
+  color: var(--color-accent);
 }
