--- a/src/style.css
+++ b/src/style.css
@@ -135,12 +135,16 @@ blockquote {
 
 .btn {
   @apply px-4 py-2 text-center border-solid border-2;
-  min-width: 7rem;
+  min-width: 6rem;
   border-color: var(--color-accent);
   color: var(--color-accent);
 
   transition: background-color 200ms ease-in-out, color 200ms ease-in-out,
     border-color 200ms ease-in-out;
+
+  @screen sm {
+    min-width: 7rem;
+  }
 
   &:hover {
     background-color: var(--color-accent);
