Remove all css from style.css
Style.css should just be imports. Doing this keeps our code cleaner and
more maintainable.

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,10 @@
 /* purgecss start ignore */
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
+@import './variables.css';
+@import './base.css';
+@import './btn.css';
+@import './miscellaneous.css';
 @import 'components/Banner/banner.css';
 @import 'components/ImgGrid/img-grid.css';
 @import 'components/Footer/footer.css';
@@ -11,251 +15,3 @@
 @import 'templates/blog-post/blog-post.css';
 /* purgecss end ignore */
 @import 'tailwindcss/utilities';
-
-:root {
-  --fontFamily-sans: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  --fontFamily-serif: 'Merriweather', 'Georgia', Cambria, 'Times New Roman',
-    Times, serif;
-  --font-body: var(--fontFamily-serif);
-  --font-heading: var(--fontFamily-sans);
-  /* 1.200 Minor Third Type Scale */
-  /* --fontSize-2: 1.2rem;
-  --fontSize-3: 1.44rem;
-  --fontSize-4: 1.728rem;
-  --fontSize-5: 2.074rem;
-  --fontSize-6: 2.488rem;
-  --fontSize-7: 2.986rem; */
-  --color-primary: #ff759b;
-  /* --color-text: #2e353f; */
-  --color-text: #3b3235;
-  --color-text-light: #4f5969;
-  --color-heading: #1a202c;
-  --color-heading-black: black;
-  --color-black: #141213;
-  --color-accent: #fbdc18;
-}
-
-html {
-  @apply leading-normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-body {
-  font-family: var(--font-body);
-  color: var(--color-text);
-}
-
-#gatsby-focus-wrapper {
-  @apply flex flex-col min-h-screen;
-  /* ensure that viewport height is full, at minimum */
-}
-
-main {
-  @apply w-full;
-  flex: 1 1 auto;
-  /* ensure that footer doesn't creep up the page if there isn't much content within main */
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  @apply leading-tight;
-  font-family: var(--font-heading);
-  letter-spacing: -0.025em;
-}
-
-h2,
-h3,
-h4,
-h5,
-h6 {
-  /* @apply font-bold; */
-  color: var(--color-primary);
-}
-
-/* h1 {
-  @apply font-black;
-  font-size: var(--fontSize-6);
-  color: var(--color-heading-black);
-} */
-
-p {
-  @apply leading-relaxed text-base;
-  @screen sm {
-    @apply text-lg;
-  }
-}
-
-blockquote {
-  @apply pl-6 mr-8 -ml-6 mb-8 italic border-l-4 text-xl;
-  color: var(--color-text-light);
-  border-color: var(--color-primary);
-
-  & > :last-child {
-    @apply mb-0;
-  }
-  & > ul,
-  & > ol {
-    list-style-position: inside;
-  }
-}
-
-.header-link-home {
-  @apply font-bold text-xl;
-  font-family: var(--font-heading);
-  text-decoration: none;
-}
-
-.bio {
-  @apply flex mt-16 max-w-2xl mx-auto;
-
-  &__text {
-    color: var(--color-text);
-    font-family: var(--font-heading);
-  }
-}
-
-.bio-avatar {
-  @apply mr-4 rounded-full;
-  min-width: 50px;
-}
-
-.partition-bottom {
-  border-bottom: 1px solid #d1dce5;
-}
-
-.container {
-  @apply max-w-3xl mx-auto px-8 py-16;
-}
-
-.btn {
-  @apply px-4 py-2 text-center border-solid border-2;
-  min-width: 6rem;
-  border-color: var(--color-accent);
-  color: var(--color-accent);
-
-  transition: background-color 200ms ease-in-out, color 200ms ease-in-out,
-    border-color 200ms ease-in-out;
-
-  @screen sm {
-    min-width: 7rem;
-  }
-
-  &:not(:last-child) {
-    @apply mr-4;
-  }
-
-  &--primary {
-    border-color: var(--color-primary);
-    color: var(--color-primary);
-
-    &:hover {
-      background-color: var(--color-primary);
-      border: 2px solid var(--color-primary);
-      color: white;
-    }
-  }
-
-  &--accent {
-    border-color: var(--color-accent);
-    color: var(--color-accent);
-
-    &:hover {
-      background-color: var(--color-accent);
-      border: 2px solid var(--color-accent);
-      color: white;
-    }
-  }
-}
-
-.color-accent {
-  color: var(--color-accent);
-}
-
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-  color: slategray;
-}
-
-.token.selector,
-.token.attr-name,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
-  color: #690;
-}
-
-.token.atrule,
-.token.attr-value,
-.token.keyword {
-  color: #07a;
-}
-
-.token.property,
-.token.tag,
-.token.boolean,
-.token.number,
-.token.constant,
-.token.symbol,
-.token.deleted {
-  color: #905;
-}
-
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string {
-  color: #9a6e3a;
-  background: hsla(0, 0%, 100%, 0.5);
-}
-
-.token.function,
-.token.class-name {
-  color: #dd4a68;
-}
-
-.token.punctuation {
-  color: #999;
-}
-
-code[class*='language-'],
-pre[class*='language-'] {
-  color: black;
-  background: none;
-  text-shadow: 0 1px white;
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-  font-size: 1em;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  word-wrap: normal;
-  line-height: 1.5;
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
-  -webkit-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
-}
-
-pre[class*='language-'] {
-  padding: 1em;
-  margin: 0.5em 0;
-  overflow: auto;
-}
-
-:not(pre) > code[class*='language-'],
-pre[class*='language-'] {
-  background: #f5f2f0;
-}
