Abstract section-title into css class
We want to keep the code DRY.

--- a/src/abstract_styles/miscellaneous.css
+++ b/src/abstract_styles/miscellaneous.css
@@ -5,3 +5,19 @@
 .container {
   @apply max-w-3xl mx-auto px-8 py-16;
 }
+
+.section-title {
+  @apply text-3xl font-light text-center;
+
+  @screen sm {
+    @apply text-4xl;
+  }
+
+  &--sm {
+    @apply text-2xl;
+
+    @screen sm {
+      @apply text-3xl;
+    }
+  }
+}
