Ensure that font is consistent
We don't have separate fonts for the titles and text, so we might as
well fix the font to the html element.

--- a/src/abstract_styles/base.css
+++ b/src/abstract_styles/base.css
@@ -1,11 +1,11 @@
 html {
   @apply leading-normal;
+  font-family: var(--font-heading);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 body {
-  font-family: var(--font-body);
   color: var(--color-text);
 }
 
