--- a/src/abstract_styles/miscellaneous.css
+++ b/src/abstract_styles/miscellaneous.css
@@ -21,3 +21,25 @@
     }
   }
 }
+
+.gatsby-highlight-code-line {
+  background-color: #feb;
+  display: block;
+  margin-right: -1em;
+  margin-left: -1em;
+  padding-right: 1em;
+  padding-left: 0.75em;
+  border-left: 0.25em solid #f99;
+}
+
+.puny-table {
+  border-spacing: 0;
+  border-collapse: collapse;
+
+  & td,
+  & th {
+    padding: 0.75rem;
+    text-align: left;
+    border: 1px solid #ccc;
+  }
+}
